syntax = "proto3";

package rode.v1alpha1;

option go_package = "github.com/liatrio/rode-api/proto/v1alpha1";

import "protodeps/grafeas/proto/v1beta1/grafeas.proto";

service Rode {
  rpc BatchCreateOccurrences(grafeas.v1beta1.BatchCreateOccurrencesRequest) returns (grafeas.v1beta1.BatchCreateOccurrencesResponse) {}
}

message Foo {
  string bar = 1;
}
